Next version:
  Progress bar during export of databases
  
Version 2.1 
  Bugs fixed (9 out of 12 reported. Too little information in the last three to be
    located:
    NumberFormatException When displaying and editing records where rowId
	  can not be stored in a Java int
	SQLiteException when trying to create new database in nonexistent path
	SQLiteException when trying to edit sqlite_master (can't be updated manually)
  Minor improvements:
	SQL in query viewer is now saved on exit and restored on load
		
Version (2.0):
  Tables can be dumped from "Table view" to SQL file (that can later be loaded 
    by execute script)
  Recent files - easy open recently opened databases (cleared on reset) 
  Number of recent files configurable
  Bug when displaying and querying tables with BLOB fields fixed
    BLOB fields set to editable = false
  Reset also restores the welcome screen
  Export (to ASCII file) now don't throw exception if missing or invalid SQL
  	but gives error
  Messages after export and restore and better error handling in places
    
Working on:
	Version with root support.
  Planning for further development, feature request are welcome, could be:
	Sort data / query results by clicking on title
	Implement some of SQLites .commands:
	  .import FILE TABLE	import data from text file to table
	"Tab" view / show active tab
	Scripts editor?
  
Version 1.2.2
  News screen on open
  Bug with displaying data form views fixed
  
Version 1.2.1
  Bug with displaying data form views fixed

Version 1.2
  Correctly scaling on the Galaxy Tab and hopefully on other large displays
  Open SQL files (from database view) and executed all or single line
  Error messages during restore and execution of scripts and statements
  Data editing form table viewer by using "Edit" button at each row
  New records can be added by using the "New" button in the table heading
    Input mode during editing and insert depends on the fields data type. SQLite